examples/invalid/24_type_alias_duplicate_parameter.lane
// Invalid: duplicate type parameter binders in the same alias header are
// rejected.

module Examples.Invalid24

pub type Bad[A, A] = A

pub let bad : Int = 42
